syntax = "proto3";

option go_package = "network/protocol";

import "google/protobuf/any.proto";

enum MessageType {
  INTERRUPT = 0;
  STATE_LOG = 1;
}

enum ActionType {
  NOOP_ACTION_TYPE = 0;
  HALT_ACTION_TYPE = 1;
  PAUSE_ACTION_TYPE = 2;
  STOP_ACTION_TYPE = 3;
  RESEND_LAST_MESSAGE_ACTION_TYPE = 4;
  CONTINUE_ACTION_TYPE = 5;
  RESTART_ACTION_TYPE = 6;
}

enum NodeState {
  FOLLOWER = 0;
  CANDIDATE = 1;
  LEADER = 2;
}

message Message {
  MessageType messageType = 1;
  ActionType actionType = 2;
  string logMessage = 3;
  NodeState nodeState = 4;
  google.protobuf.Any messageObject = 5;
  optional CustomData customData = 6;
}

message DAResponse {
  string responseType = 1;
}

message CustomData {
  string protocolName = 1;
  google.protobuf.Any data = 2;
}

message VoteRequestReceived {
  uint32 requestingNodeId = 1;
  uint32 receivingNodeId = 2;
}

message VoteReceived {
  uint32 votingNodeId = 1;
  uint32 votedNodeId = 2;
  bool voteGranted = 3;
}

message LogEntryReplicated {
  uint32 leaderId = 1;
  uint32 receivingNodeId = 2;
  int64 logEntryNumber = 3;
}

message LogEntryCommitted {
  uint32 leaderId = 1;
  uint32 receivingNodeId = 2;
  int64 logEntryNumber = 3;
}

message LeaderSuspected {
  uint32 leaderId = 1;
  uint32 suspectingNodeId = 2;
}

message FollowerSuspected {
  uint32 leaderId = 1;
  uint32 followerId = 2;
}